# Alyra

./: .gitignore  LICENSE  README.md  docker-compose.yaml
backend/: Cargo.toml  Dockerfile
backend/config/keys/: private.pem  public.pem
backend/migrations/: 001_init.sql
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/dto/: auth_dto.rs  device_dto.rs  mod.rs  payment_dto.rs  vendor_dto.rs
backend/src/errors/: mod.rs
backend/src/middleware/: auth.rs  rate_limit.rs
backend/src/models/: alert.rs  consumption_log.rs  device.rs  grid_meter.rs  mod.rs  solar_kit.rs  token.rs  transaction.rs  user.rs  vendor.rs
backend/src/repository/: device_repo.rs  mod.rs  token_repo.rs  transaction_repo.rs  user_repo.rs  vendor_repo.rs
backend/src/routes/: auth_routes.rs  device_routes.rs  health_routes.rs  mod.rs  payment_routes.rs  ussd_routes.rs  vendor_routes.rs
backend/src/services/: auth_service.rs  interswitch.rs  mod.rs  payment_service.rs  prediction_service.rs  sms_service.rs  token_service.rs  ussd_service.rs
backend/src/state/: mod.rs
frontend/: package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  login_page.tsx  page.tsx  payment_callback_page.tsx  register_page.tsx
frontend/app/dashboard/: buy_page.tsx  buy_payment_page.tsx  page.tsx  transactions_page.tsx
frontend/app/dashboard/buy/: page.tsx
frontend/app/dashboard/buy/payment/: page.tsx
frontend/app/dashboard/register-device/: page.tsx
frontend/app/login/: page.tsx
frontend/app/payment/callback/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: AlertBanner.tsx  NavBar.tsx  TokenModal.tsx
frontend/lib/: api.ts
