[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bcrypt = "0.18.0"
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "10.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
tower-http = { version = "0.6.8", features = ["cors"] }
anyhow = "1.0.102"
actix-web = "4.13.0"
redis = { version = "0.27.5", features = ["tokio-comp", "aio", "connection-manager"] }
dotenvy = "0.15.7"
actix-cors = "0.7.1"
bigdecimal = { version = "0.4.10", features = ["serde"] }
